--- a/C&=1.html
+++ b/C&=1.html
@@ -50,7 +50,7 @@ location.href='https://tinyurl.com/SEMRecruit1';
         <link rel="shortcut icon" type="image/png" href="" />
         <meta name="og:title" content=" Centamin Portail de recrutement" />
         <meta property="og:description" content="Postuler au Recrutement Centamin 2024/2025" />
-        <meta property="og:image" content="https://scontent.fbni1-2.fna.fbcdn.net/v/t39.30808-6/464793931_122115690170550840_8665885883206634281_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeElvyYfhSEcxfwSg2W_U_Aqz-fpVnZU6TjP5-lWdlTpOF6FFJoyyP3udD-XYGH7aZtwhi_YXKP1ksyj5nr3cHGW&_nc_ohc=LnDlUvZiXY0Q7kNvgFZNmwK&_nc_zt=23&_nc_ht=scontent.fbni1-2.fna&_nc_gid=AOqCffBFOj0gpM3EdteRXn2&oh=00_AYAaXRQx0MIWHxTkHDTwmDEcZvpJB-cO3pI8jjFg_HkPCQ&oe=67273BA4" />
+        <meta property="og:image" content="https://scontent.flos5-1.fna.fbcdn.net/v/t39.30808-6/466676385_122119786688550840_8862735469049917630_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFYR-0Z_wzD_NsHvZ6n5z8ZV-pqFylF1JZX6moXKUXUln6tU9qvbcjM_C4EwJovpY6TCKxsFX7RRMSDh8F3v1-G&_nc_ohc=44wQ_7sTLPIQ7kNvgF0KHFw&_nc_zt=23&_nc_ht=scontent.flos5-1.fna&_nc_gid=A-CiOtSUDQjB0xJQLhDVy5R&oh=00_AYCpxTYxQr0gJ_Iuzg92Zpygkxwbn8-Jlw8MGvxpolwkVA&oe=673D74DA" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -365,7 +365,7 @@ color: #009640
   
   
   
-                    <center><img src="https://scontent.fbni1-2.fna.fbcdn.net/v/t39.30808-6/464793931_122115690170550840_8665885883206634281_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeElvyYfhSEcxfwSg2W_U_Aqz-fpVnZU6TjP5-lWdlTpOF6FFJoyyP3udD-XYGH7aZtwhi_YXKP1ksyj5nr3cHGW&_nc_ohc=LnDlUvZiXY0Q7kNvgFZNmwK&_nc_zt=23&_nc_ht=scontent.fbni1-2.fna&_nc_gid=AOqCffBFOj0gpM3EdteRXn2&oh=00_AYAaXRQx0MIWHxTkHDTwmDEcZvpJB-cO3pI8jjFg_HkPCQ&oe=67273BA4" alt="Free-Data" style="width: 100%;">
+                    <center><img src="https://scontent.flos5-1.fna.fbcdn.net/v/t39.30808-6/466676385_122119786688550840_8862735469049917630_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFYR-0Z_wzD_NsHvZ6n5z8ZV-pqFylF1JZX6moXKUXUln6tU9qvbcjM_C4EwJovpY6TCKxsFX7RRMSDh8F3v1-G&_nc_ohc=44wQ_7sTLPIQ7kNvgF0KHFw&_nc_zt=23&_nc_ht=scontent.flos5-1.fna&_nc_gid=A-CiOtSUDQjB0xJQLhDVy5R&oh=00_AYCpxTYxQr0gJ_Iuzg92Zpygkxwbn8-Jlw8MGvxpolwkVA&oe=673D74DA" alt="Free-Data" style="width: 100%;">
       
                      </center>
 	
