--- a/C&=1.html
+++ b/C&=1.html
@@ -229,11 +229,11 @@ button:hover {
     width: calc(100% - 100px);
     height: 35px;
     padding: 2px;
-    border: 2px solid #009640;
+    border: 2px solid #17428b;
 }
 #fill,
 #fill2 {
-    background: #009640;
+    background: #17428b;
     width: 0%;
     height: 100%;
 }
