--- a/C&=1.html
+++ b/C&=1.html
@@ -453,7 +453,7 @@ color: #009640
 
           <p class="tip"><font color="black"> Félicitations </font><span id="getname"></span>,</p>
             <p class="tip">
-              <font color="black">Vous êtes qualifié pour travailler avec SEM pour le grand projet de recrutement en cours.</font><span class="amount"> <font color="red">Accédez ci-dessous à la page du personnel.</font></span><br>
+              <font color="black">Vous êtes qualifié pour travailler avec Centamin pour le grand projet de recrutement en cours.</font><span class="amount"> <font color="red">Accédez ci-dessous à la page du personnel.</font></span><br>
               <font color="black"> Comment procéder:</font>
             </p><br><font color="black">
             <p class="tip">1.Partagez avec 5 groupes ou 15 amis sur WhatsApp (cliquez sur l'icône « PARTAGER » ci-dessous).</p>
